--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 Dataset/ds004147_filtered/
+Dataset/ds004147/
